--- a/app/css/main.css
+++ b/app/css/main.css
@@ -26,13 +26,17 @@ body {
 .grid-main {
     background: #2F3136;
     position: relative;
+    display: inline-block;
 }
 .grid-main-wrap {
     background: #484B51;
-    position: relative;
-    margin: 12px;
     padding: 8px;
+    display: block;
+    margin: 14px auto 14px auto;
     width: 90%;
+    border: 1px rgba(0, 0, 0, 0);
+    border-radius: 0.3em 0.3em 0 0;
+    box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.5);
 }
 .grid-main-info {
     background: #484B51;
@@ -47,8 +51,9 @@ body {
     text-transform: capitalize;
     font-weight: bold;
     text-align: center;
+    margin-bottom: 5px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.24);
 }
-
 
 .grid-main-content {
     margin: 5px;
@@ -57,16 +62,70 @@ body {
 .grid-footer {
     background-color: #484B51;
     border-top: 1px solid #484B51;
+    position: relative;
+}
 
+.grid-search {
+    top: 50%;
+    transform: translateY(50%);
+    float: left;
+    width: auto;
+}
+
+.grid-search form {
+    
+}
+
+.grid-search input[type=text] {
+    background-color: #e8eeef;
+    border: 0;
+    border-radius: 4px;
+    color: #8a97a0;
+    padding: 8px;
+    margin: 5px;
+    font-weight: bold;
+}
+.grid-removelist {
+    float: right;
+}
+
+.grid-exportlist{
+    float: right;
+}
+
+.grid-exportall {
+    float: right;
+}
+.btn {
+    border-radius: 2px;
+    border: 0;
+    background: #B9C300;
+    display: block;
+    font-weight: bold;
+    line-height: 50px;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    margin: 8px;
+}
+
+.listbtn {
+    height: 50px;
+    width: 85%;
 }
 
 table {
+    border: 2px solid #42b983;
+    border-radius: 3px;
+    background-color: #fff;
+    border-spacing: 2px;
     table-layout: auto;
     border-collapse: collapse;
     width: 100%;
 }
 table th {
     background-color: #484B51;
+    cursor: pointer;
     font-weight: bold;
 }
 table td {
