--- a/app/css/grid.css
+++ b/app/css/grid.css
@@ -82,3 +82,31 @@ body {
     grid-area: note;
 }
 
+/* modal.html grid */
+.modal-submission {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows:  repeat(4, 1fr);
+    display: grid;
+    grid-template-areas: "modal-name"
+                         "modal-eta"
+                         "modal-note"
+                         "modal-submit";
+}
+
+.modal-title {
+    grid-area: modal-title;
+}
+
+.modal-name {
+    grid-area: modal-name;
+}
+
+.modal-eta {
+    grid-area: modal-eta;
+}
+.modal-note {
+    grid-area: modal-note;
+}
+.modal-submit {
+    grid-area: modal-submit;
+}
