--- a/app/css/main.css
+++ b/app/css/main.css
@@ -55,7 +55,7 @@ body {
     margin: 5px;
 }
 
-.grid-main-title {
+.title {
     background-color: #B9C300;
     color: #333447;
     text-transform: capitalize;
@@ -63,6 +63,10 @@ body {
     text-align: center;
     margin-bottom: 5px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.24);
+}
+
+.grid-main-title {
+    
 }
 
 .grid-main-content {
@@ -107,7 +111,7 @@ body {
 	color: #fff;
 	background: none;
     cursor: pointer;
-    line-height: 45px;
+    line-height: 45px; 
 	display: block;
 	margin: 8px;
 	text-transform: uppercase;
