--- a/app/css/grid.css
+++ b/app/css/grid.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: 100px repeat(11, 1fr);
     grid-template-rows:  repeat(12, 1fr);
     grid-template-areas: "logo topbar topbar topbar topbar topbar topbar topbar topbar topbar topbar topbar"
                          "sidebar main main main main main main main main main main main" 
