--- a/app/css/main.css
+++ b/app/css/main.css
@@ -135,7 +135,7 @@ input {
     cursor: pointer;
     line-height: 45px; 
 	display: block;
-	margin: 8px;
+	
 	text-transform: uppercase;
 	font-weight: bold;
 	outline: none;
@@ -166,6 +166,24 @@ input {
     margin: 0px auto 8px auto;
     width: 90%;
 }
+
+.tablebtn {
+    background-image: url('../asset/deleteButton.png');
+    background-repeat: no-repeat;
+    background-size: 32px 32px;
+    background-position: center;
+    overflow: auto;
+    width: 85%;
+    height: 100%;
+    padding: 0;
+    margin: 4px;
+    font-weight: bolder;
+}
+
+.funcbtn {
+    margin: 8px;
+}
+
 
 .listbtn:hover,
 .listbtn:active {
