--- a/app/css/main.css
+++ b/app/css/main.css
@@ -133,9 +133,7 @@ input {
 	color: #fff;
 	background: none;
     cursor: pointer;
-    line-height: 45px; 
 	display: block;
-	
 	text-transform: uppercase;
 	font-weight: bold;
 	outline: none;
@@ -150,7 +148,7 @@ input {
 
 .addbtn {
     font-size: 2.5em;
-    line-height: normal;
+    height: 50px;
     margin: 8px auto 8px auto;
     width: 90%;
 } 
@@ -158,7 +156,7 @@ input {
 .listbtn {
     background-image: url('../asset/shipentry.png');
     background-repeat: no-repeat;
-    background-size: 32px 32px;
+    background-size: 20px 20px;
     background-position: top;
     height: 50px;
     width: 85%;
@@ -170,18 +168,28 @@ input {
 .tablebtn {
     background-image: url('../asset/deleteButton.png');
     background-repeat: no-repeat;
-    background-size: 32px 32px;
+    background-size: contain;
+    background-color: transparent;
     background-position: center;
+    border: none;
+    display: block;
     overflow: auto;
     width: 85%;
-    height: 100%;
+    height: 32px;;
     padding: 0;
     margin: 4px;
     font-weight: bolder;
+    cursor: pointer;
+}
+
+.tablebtn:focus {
+    outline: none;
+    border: 1px solid #fff;
 }
 
 .funcbtn {
     margin: 8px;
+    line-height: 45px;
 }
 
 
@@ -232,6 +240,21 @@ th.active .arrow {
 td input {
     width: 90%;
 }
+
+.tableinput {
+    color: #fff;
+    border: none;
+    background: transparent;
+    text-align: center;
+}
+.tableinput:focus {
+    outline: none;
+    border: 1px solid #fff;
+}
+
+.tableselect {
+    
+}
   
 ul {
     list-style-type: none;
@@ -242,7 +265,6 @@ ul {
     padding: 0;
     margin: 0;
 }
-
 ul::-webkit-scrollbar {
     display: none;
 }
@@ -252,10 +274,10 @@ ul li {
 }
   
 .arrow {
-    float: left;
+    float: right;
 }
 .arrow::after {
-    display: inline-block;
+    display: absolute;
     vertical-align: middle;
     content: '';
     width: 0;
@@ -264,12 +286,16 @@ ul li {
 }
   
 .arrow.asc::after {
+    position: absolute;
+    padding-right: 0;
     border-left: 4px solid transparent;
     border-right: 4px solid transparent;
     border-bottom: 4px solid #fff;
 }
   
 .arrow.dsc::after {
+    position: absolute;
+    padding-right: 0;
     border-left: 4px solid transparent;
     border-right: 4px solid transparent;
     border-top: 4px solid #fff;
