--- a/app/scss/partials/index.scss
+++ b/app/scss/partials/index.scss
@@ -56,7 +56,7 @@ body {
     
 }
 .grid-main-wrap {
-    background: #484B51;
+    background: $footer-main-wrap-color;
     padding: 8px;
     margin-left: auto;
     margin-right: auto;
@@ -66,7 +66,7 @@ body {
     box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.5);
 }
 .grid-main-info {
-    background: #484B51;
+    background: $footer-main-wrap-color; 
     text-transform: capitalize;
     font-weight: bold;
     margin: 5px;
@@ -77,8 +77,8 @@ body {
 }
 
 .title {
-    background-color: #B9C300;
-    color: #333447;
+    background-color: $base-title-color;
+    color: $base-font-color;
     text-transform: capitalize;
     font-weight: bold;
     text-align: center;
@@ -95,7 +95,7 @@ body {
 }
 
 .grid-footer {
-    background-color: #484B51;
+    background-color: $footer-main-wrap-color;
     border-top: 1px solid #000;
     position: relative;
 }
@@ -210,7 +210,7 @@ table {
     width: 100%;
 }
 table th {
-    background-color: #484B51;
+    background-color: $footer-main-wrap-color;
     cursor: pointer;
     font-weight: bold;
     text-align: center;
