--- a/app/scss/partials/index.scss
+++ b/app/scss/partials/index.scss
@@ -1,7 +1,7 @@
 
 
 body {
-    font-family: Lato,Helvetica,sans-serif;
+    font: caption;
     color: #fff;
     line-height: 1.5;
     overflow-x: hidden;
@@ -77,6 +77,7 @@ body {
 }
 
 .title {
+    @include not-selectable;
     background-color: $base-title-color;
     color: $base-font-color;
     text-transform: capitalize;
@@ -88,6 +89,10 @@ body {
 
 .grid-main-title {
     
+}
+
+.main-section {
+    @include not-selectable;
 }
 
 .grid-main-content {
@@ -112,7 +117,7 @@ body {
 }
 
 input {
-    background-color: #e8eeef;
+    background-color: $input-color;
     border: 0;
     color: #333447;
     padding: 2px;
@@ -131,6 +136,7 @@ input {
     float: right;
 }
 .btn {
+    @include not-selectable;
     border: 2px solid #fff;
 	color: #fff;
 	background: none;
@@ -167,6 +173,13 @@ input {
     width: 90%;
 }
 
+.listbtn:hover,
+.listbtn:active {
+    background-image: url('../asset/shipentry_dark.png');
+    background-repeat: no-repeat;
+    background-size: 32px 32px;
+    background-position: top;
+}
 .tablebtn {
     background-image: url('../asset/deleteButton.png');
     background-repeat: no-repeat;
@@ -177,11 +190,15 @@ input {
     display: block;
     overflow: auto;
     width: 85%;
-    height: 32px;;
+    height: 20px;;
     padding: 0;
     margin: 4px;
     font-weight: bolder;
     cursor: pointer;
+}
+
+.tableaddbtn {
+    margin: 4px auto 4px auto;
 }
 
 .tablebtn:focus {
@@ -194,14 +211,6 @@ input {
     line-height: 45px;
 }
 
-
-.listbtn:hover,
-.listbtn:active {
-    background-image: url('../asset/shipentry_dark.png');
-    background-repeat: no-repeat;
-    background-size: 32px 32px;
-}
-
 table {
     border: 1px solid #fff;
     border-spacing: 2px;
@@ -210,6 +219,7 @@ table {
     width: 100%;
 }
 table th {
+    @include not-selectable;
     background-color: $footer-main-wrap-color;
     cursor: pointer;
     font-weight: bold;
@@ -255,7 +265,7 @@ td input {
 }
 
 .tableselect {
-    
+    background-color: $input-color;
 }
   
 ul {
