--- a/app/css/main.css
+++ b/app/css/main.css
@@ -21,9 +21,6 @@ body {
 .grid-sidebar {
   grid-area: sidebar; }
 
-.grid-main {
-  grid-area: main; }
-
 .grid-main-info {
   grid-area: info; }
 
@@ -36,7 +33,21 @@ body {
 .addlistitem {
   grid-area: addlistitem; }
 
-/* second grid inside grid-main-info rgba(162, 179, 181, 0.95);*/
+/* grid-main grid */
+.grid-main {
+  grid-area: main;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 12px 1fr 12px; }
+
+.grid-main-wrap {
+  grid-area: wrap;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 1;
+  grid-column-end: 1; }
+
+/* second grid inside grid-main-info */
 .grid-main-info {
   grid-template-columns: 2fr 10fr 1fr 2fr 10fr;
   grid-template-rows: repeat(3, 1fr);
@@ -66,6 +77,116 @@ body {
 
 .main-note-input {
   grid-area: note-input; }
+
+.grid-main-content {
+  grid-template-columns: 1fr;
+  grid-template-rows: 30px 1fr;
+  grid-template-areas: "content-title" "table"; }
+
+.grid-main-content-title {
+  grid-area: content-title; }
+
+/* */
+.table-content {
+  display: grid;
+  justify-content: space-around;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-areas: "tableid tablesdgnr tablecontainernr tableloeschdatum tableuhrzeit tableselect tableabgabdedatum tablenotiz tablebtn"; }
+
+.tableid {
+  grid-area: tableid; }
+
+.tablesdgnr {
+  grid-area: tablesdgnr; }
+
+.tablecontainernr {
+  grid-area: tablecontainernr; }
+
+.tableloeschdatum {
+  grid-area: tableloeschdatum; }
+
+.tableuhrzeit {
+  grid-area: tableuhrzeit; }
+
+.tableselect {
+  grid-area: tableselect; }
+
+.tableabgabedatum {
+  grid-area: tableabgabedatum; }
+
+.tablenotiz {
+  grid-area: tablenotiz; }
+
+.tablebtn {
+  grid-area: tablebtn; }
+
+/* */
+.table-head {
+  display: grid;
+  justify-content: space-around;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-areas: "heading1 heading2 heading3 heading4 heading5 heading6 heading7 heading8 heading9"; }
+
+.heading1 {
+  grid-area: heading1; }
+
+.heading2 {
+  grid-area: heading2; }
+
+.heading3 {
+  grid-area: heading3; }
+
+.heading4 {
+  grid-area: heading4; }
+
+.heading5 {
+  grid-area: heading5; }
+
+.heading6 {
+  grid-area: heading6; }
+
+.heading7 {
+  grid-area: heading7; }
+
+.heading8 {
+  grid-area: heading8; }
+
+.heading9 {
+  grid-area: heading9; }
+
+/* */
+.table-add {
+  display: grid;
+  justify-content: space-around;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-areas: "addrowlength addsdgnr addcontainernr addloeschdatum adduhrzeit addtableselect addabgabedatum addnotiz tableaddbtn"; }
+
+.addrowlength {
+  grid-area: addrowlength; }
+
+.addsdgnr {
+  grid-area: addsdgnr; }
+
+.addcontainernr {
+  grid-area: addcontainernr; }
+
+.addloeschdatum {
+  grid-area: addloeschdatum; }
+
+.adduhrzeit {
+  grid-area: adduhrzeit; }
+
+.addtableselect {
+  grid-area: addtableselect; }
+
+.addabgabedatum {
+  grid-area: addabgabedatum; }
+
+.addnotiz {
+  grid-area: addnotiz; }
+
+.tableaddbtn {
+  grid-area: tableaddbtn; }
 
 /* modal.html grid */
 .modal-submission {
@@ -131,16 +252,15 @@ body {
 
 .grid-main {
   background: #2F3136;
-  position: relative;
-  padding-top: 14px;
   height: 100%; }
 
 .grid-main-wrap {
   background: #484B51;
-  padding: 8px;
   margin-left: auto;
   margin-right: auto;
+  height: 100%;
   width: 90%;
+  overflow-x: hidden;
   border: 1px transparent;
   border-radius: 0.3em 0.3em 0 0;
   box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.5); }
@@ -151,8 +271,8 @@ body {
   font-weight: bold;
   margin: 5px; }
 
-.grid-main-content tbody {
-  overflow: auto; }
+.main-table {
+  width: 100%; }
 
 .title {
   -webkit-user-select: none;
@@ -183,14 +303,6 @@ body {
 
 .grid-search input[type=text] {
   padding: 8px; }
-
-input {
-  background-color: #e8eeef;
-  border: 0;
-  color: #333447;
-  padding: 2px;
-  margin: 4px;
-  font-weight: bold; }
 
 .grid-removelist {
   float: right; }
@@ -303,8 +415,29 @@ tr:nth-child(odd) td {
 th.active .arrow {
   opacity: 1; }
 
-td input {
-  width: 90%; }
+.table-wrap {
+  overflow: hidden;
+  padding-right: 17px;
+  overflow-y: scroll;
+  height: 100%; }
+
+select {
+  background-color: #e8eeef;
+  width: 90%;
+  border: 0;
+  color: #333447;
+  padding: 2px;
+  margin: 4px;
+  font-weight: bold; }
+
+input {
+  background-color: #e8eeef;
+  width: 90%;
+  border: 0;
+  color: #333447;
+  padding: 2px;
+  margin: 4px;
+  font-weight: bold; }
 
 .tableinput {
   color: #fff;
