--- a/app/scss/partials/index.scss
+++ b/app/scss/partials/index.scss
@@ -71,7 +71,7 @@ body {
 }
 
 .grid-main-content {
-    
+    height: 100%;
 }
 .main-table {
     width:100%;
@@ -204,6 +204,35 @@ body {
     line-height: 45px;
 }
 
+.table-wrap {
+    border: 1px solid #fff;
+    padding-right: 17px;
+    overflow-y: hidden;
+    width: 100%;
+    position: relative;
+}
+
+.table-head {
+    @include not-selectable;
+    border: 1px solid #fff;
+    background-color: $footer-main-wrap-color;
+    color: #fff;
+    cursor: pointer;
+    width: 100%;
+    font-weight: bold;
+    text-align: center;
+}
+
+.table-content:nth-child(even) {
+    background: #666b74; 
+    text-align: center;
+}
+.table-content:nth-child(odd) {
+    background: rgb(136, 143, 155); 
+    text-align: center;
+}
+
+
 table {
     border: 1px solid #fff;
     border-spacing: 2px;
@@ -212,44 +241,16 @@ table {
     width: 100%;
 }
 table th {
-    @include not-selectable;
-    background-color: $footer-main-wrap-color;
-    cursor: pointer;
-    font-weight: bold;
-    text-align: center;
+    
 }
 table thead {
-    border: 1px solid #fff;
-	color: #fff;
-}
-
-
-
-table td {
-    background: #FAFAFA;
-    text-align: center;
-}
-tr:hover {
-    background-color: rgb(15, 201, 9); 
-}
-
-tr:nth-child(even) td {
-    background: rgb(102, 107, 116); 
-}   
     
-tr:nth-child(odd) td {
-    background: rgb(136, 143, 155); 
-}  
+}
+
+
 
 th.active .arrow {
     opacity: 1;
-}
-
-.table-wrap {
-    overflow: hidden; 
-    padding-right: 17px;
-    overflow-y:scroll;
-    height: 100%;
 }
 
 select {
